<resources>
    <string name="app_name">HW9</string>
    <string name="AppTitle">WeatherApp</string>
    <string name="fraq_temperature">59°F</string>
    <string name="frag_summary">Clear</string>
    <string name="frag_location">Los Angeles, CA, USA</string>
    <string name="frag_humidity_tag">Humidity</string>
    <string name="frag_wind_tag">Wind Speed</string>
    <string name="frag_vis_tag">Visibility</string>
    <string name="frag_pres_tag">Pressure</string>
    <string name="frag_val_humi">79%</string>
    <string name="frag_val_wind">0.18mph</string>
    <string name="frag_val_vis">9.32km</string>
    <string name="frag_val_pre">1015.80mb</string>
    <string name="act_tag_today">TODAY</string>
    <string name="act_tag_weekly">WEEKLY</string>
    <string name="act_tag_photos">PHOTOS</string>
    <string name="icon_clear_night">clear_night</string>
    <string name="img_humi">humidity</string>
    <string name="img_wind">wind_speed</string>
    <string name="img_vis">visivility</string>
    <string name="frag_today_temper_img">Temperature</string>
    <string name="frag_today_weather_img">clear night</string>
    <string name="frag_today_humi_img">Humidity</string>
    <string name="frag_today_vis_img">Visibility</string>
    <string name="frag_today_cloud_img">Cloud Cover</string>
    <string name="frag_today_ozo_img">Ozone</string>
    <string name="frag_today_wind_img">Wind Speed</string>
    <string name="frag_today_pressure_img">Pressure</string>
    <string name="frag_today_preci_img">Precipitation</string>
    <string name="frag_today_value_wind">0.34mph</string>
    <string name="frag_today_value_pre">1015.80mb</string>
    <string name="frag_today_value_preci">0.00mmph</string>
    <string name="frag_today_value_temper">59°F</string>
    <string name="frag_today_value_humi">76%</string>
    <string name="frag_today_value_vis">10.00km</string>
    <string name="frag_today_value_cloud">0%</string>
    <string name="frag_today_value_ozo">291.80DU</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_week_precip">No precipitation throughout this week.</string>
    <string name="frag_fav_list_row1_low">44</string>
    <string name="frag_fav_list_row2_weather" />
    <string name="frag_fav_list_row1_high">90</string>
    <string name="frag_fav_list_row1_date">11/15/2019</string>
</resources>
