<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView9"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6"
        app:layout_constraintVertical_bias="0.0" >

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/frag_today_ozo_img"
            app:srcCompat="@mipmap/ozone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_ozo_img"
            android:textColor="@color/summary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="105dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/val_ozo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_value_ozo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:textColor="@color/textColor"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/frag_today_vis_img"
            app:srcCompat="@mipmap/frag_vis" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_vis_img"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="105dp"
            android:textColor="@color/summary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/val_vis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_value_vis"
            android:textColor="@color/textColor"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" >

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/frag_today_humi_img"
            app:srcCompat="@mipmap/frag_humi" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_humidity_tag"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="105dp"
            android:textColor="@color/summary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/val_humi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_value_humi"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:textColor="@color/textColor"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" >

        <ImageView
            android:id="@+id/icon_name"
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:contentDescription="@string/frag_today_weather_img"
            app:srcCompat="@mipmap/weather_night" />

        <TextView
            android:id="@+id/val_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_weather_img"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="115dp"
            android:textColor="@color/summary"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginStart="284dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7">

        <ImageView
            android:id="@+id/imageView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/frag_today_preci_img"
            app:srcCompat="@mipmap/preci" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_preci_img"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="105dp"
            android:textColor="@color/summary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/val_preci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_value_preci"
            android:textColor="@color/textColor"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginStart="15dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7">

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/frag_today_wind_img"
            app:srcCompat="@mipmap/frag_wind" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_wind_img"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="105dp"
            android:textColor="@color/summary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/val_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_value_wind"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginStart="148dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7">

        <ImageView
            android:id="@+id/imageView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/frag_today_pressure_img"
            app:srcCompat="@mipmap/frag_pre" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_pres_tag"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="105dp"
            android:textColor="@color/summary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/val_pres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_value_pre"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="233dp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:layout_constraintEnd_toStartOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" >

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/frag_today_temper_img"
            app:srcCompat="@mipmap/temperature" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="105dp"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_temper_img"
            android:textColor="@color/summary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/val_temper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_value_temper"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardView9"
        app:layout_constraintStart_toEndOf="@+id/cardView8"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        app:layout_constraintVertical_bias="0.0" >

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/frag_today_cloud_img"
            app:srcCompat="@mipmap/cloudc" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_cloud_img"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="105dp"
            android:textColor="@color/summary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/val_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_today_value_cloud"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:textColor="@color/textColor"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>